segment: don't WARN, just DEBUG

Fixes https://bugzilla.gnome.org/show_bug.cgi?id=696911